--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,9 @@ include_directories(include)
 
 # Add here all libraries' directories
 #add_subdirectory(name_of_directory)
-add_subdirectory(libs/Logger)
-add_subdirectory(libs/mqttLogger)
-add_subdirectory(libs/Publisher)
-add_subdirectory(libs/Subscriber)
-add_subdirectory(libs/Sensor)
-
+add_subdirectory(libs/Controller)
+add_subdirectory(libs/Stepper)
+add_subdirectory(libs/PwmMotor)
 
 # Install and export (do not touch this part)
 install(
