--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(include)
 # Add here all libraries' directories
 #add_subdirectory(name_of_directory)
 add_subdirectory(libs/Controller)
+add_subdirectory(libs/SPI)
 
 # Install and export (do not touch this part)
 install(
