updated names and added install config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(RovCommon)
+project(PolitoceanRovCommon)
 
 include_directories(include)
 
@@ -9,30 +9,30 @@ add_subdirectory(libs/Controller)
 
 # Install and export (do not touch this part)
 install(
-  EXPORT RovCommonTargets
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/RovCommon
-  NAMESPACE RovCommon::
-  FILE RovCommonTargets.cmake
+  EXPORT PolitoceanRovCommonTargets
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/PolitoceanRovCommon
+  NAMESPACE PolitoceanRovCommon::
+  FILE PolitoceanRovCommonTargets.cmake
   )
 
 include(CMakePackageConfigHelpers)
 configure_package_config_file( 
   "Config.cmake.in" 
-  "RovCommonConfig.cmake"
-  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/RovCommon
+  "PolitoceanRovCommonConfig.cmake"
+  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/PolitoceanRovCommon
   PATH_VARS
     CMAKE_INSTALL_LIBDIR
   )
 
 write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/RovCommonConfigVersion.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/PolitoceanRovCommonConfigVersion.cmake
   VERSION 1.0.0
   COMPATIBILITY SameMajorVersion
   )
 
 ### Install Config and ConfigVersion files
 install(
-  FILES "${CMAKE_CURRENT_BINARY_DIR}/RovCommonConfig.cmake"
-        "${CMAKE_CURRENT_BINARY_DIR}/RovCommonConfigVersion.cmake"
-  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/RovCommon"
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/PolitoceanRovCommonConfig.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/PolitoceanRovCommonConfigVersion.cmake"
+  DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/PolitoceanRovCommon"
   )
