--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -1,2 +1,2 @@
 @PACKAGE_INIT@
-include( "${CMAKE_CURRENT_LIST_DIR}/RovCommonTargets.cmake" )
+include( "${CMAKE_CURRENT_LIST_DIR}/PolitoceanRovCommonTargets.cmake" )
